--- a/test/index.html
+++ b/test/index.html
@@ -1,31 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rhenium Framework test</title>
+
+  <style>
+    .rhenium-modal {
+      display: flex;
+      box-sizing: border-box;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -9990;
+      background-color: rgba(1, 1, 1, 0.85);
+      opacity: 0;
+      visibility: hidden;
+      will-change: opacity;
+      transition: opacity ease 0.6s;
+    }
+
+    .rhenium-modal:hover {
+      cursor: pointer;
+    }
+
+    .rhenium-modal.rhenium-active {
+      z-index: 9990;
+      opacity: 1;
+      visibility: visible;
+      will-change: opacity;
+      transition: opacity ease 0.6s;
+    }
+
+    .rhenium-modal * {
+      box-sizing: inherit;
+    }
+
+    .rhenium-modal-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      padding: 20px;
+      background-color: red;
+    }
+
+    .rhenium-modal-content {
+      cursor: auto;
+    }
+
+    .rhenium-modal-content::before {
+      content: '';
+      display: block;
+      padding-top: 56.25%;
+    }
+
+    .rhenium-modal-content iframe {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      max-width: 600px;
+      height: 100%;
+      margin: 0 auto;
+    }
+
+    .rhenium-modal-close {
+      display: block;
+      position: absolute;
+      top: -30px;
+      right: -30px;
+      width: 26px;
+      height: 26px;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E %3Cpath d='M28.2 24L47.1 5.1a2.9 2.9 0 0 0 0-4.2 2.9 2.9 0 0 0-4.2 0L24 19.7 5.1.9A2.9 2.9 0 0 0 .9.9a2.9 2.9 0 0 0 0 4.2L19.7 24 .9 42.8a2.9 2.9 0 0 0 0 4.2c.6.7 1.3 1 2.1 1s1.5-.3 2.1-.9L24 28.2l18.9 18.9c.6.6 1.4.9 2.1.9s1.5-.3 2.1-.9a2.9 2.9 0 0 0 0-4.2L28.2 24z' fill='%23fff'/%3E %3C/svg%3E");
+      opacity: 1;
+      will-change: opacity;
+      transition: opacity ease 0.3s;
+    }
+
+    .rhenium-modal-close:hover {
+      opacity: 0.8;
+      cursor: pointer;
+    }
+
+    .rhenium-modal-header {
+      padding: 20px;
+      font-size: 32px;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    .rhenium-modal-body {
+      flex-grow: 1;
+    }
+
+    .rhenium-modal-btn {
+      padding: 10px 15px;
+      border: 1px solid transparent;
+      font: inherit;
+      color: inherit;
+      background-color: transparent;
+      cursor: pointer;
+      text-transform: uppercase;
+    }
+
+    .rhenium-modal-btn-agree {
+      color: #fff;
+      background-color: #009900;
+    }
+
+    .rhenium-modal-btn-disagree {
+      border-color: rgba(54, 121, 255, 0.8);
+      color: #3679ff;
+    }
+  </style>
 </head>
+
 <body>
 
-  <a href="#" data-rhenium-modal data-rhenium-target=".a-modal">Test</a>
-  <a href="#" data-rhenium-modal data-rhenium-target=".a-modal">Test</a>
-  <a href="#" data-rhenium-modal data-rhenium-target=".a-modal">Test</a>
+  <!-- <a href="#" data-rhenium-modal data-rhenium-target=".a-modal">Test .</a> -->
+  <a href="#" data-rhenium-modal data-rhenium-target="#a-modal">Test #</a>
+  <a href="#" data-rhenium-modal data-rhenium-target="youtube:QgOXIEhHU1Y">Test youtube:{someId}</a>
+  <a href="#" data-rhenium-modal data-rhenium-target="iframe:./iframe/i/index.html">Test iframe:{someId}</a>
 
   <div class="rhenium-modal-opener">fak</div>
+
+
+  <section class="rhenium-modal rhenium-modal-alert" id="a-modal">
+    <div class="rhenium-modal-content">
+      <i class="rhenium-modal-close"></i>
+      <iframe src="https://www.youtube.com/embed/Mz21JXVHOtc" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <!-- <section class="rhenium-modal rhenium-modal-alert" id="a-modal">
+    <div class="rhenium-modal-content">
+      <i class="rhenium-modal-close"></i>
+      <iframe src="https://www.youtube.com/embed/Mz21JXVHOtc" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+    </div>
+  </section> -->
 
 
   <script src="../dist/rhenium.umd.js"></script>
   <!-- <script src="./script.js"></script> -->
   <script>
-    var a = new Rhenium.Modal();
+    var a = new Rhenium.Modal('[data-rhenium-modal]', {
+      // debug: true
+    });
     console.log(a);
-    // var classy = new Rhenium.Modal('.rhenium-modal-opener', {
-    //   speed: 500
-    // });
-    // console.log(classy);
-    a.destroy();
-    a.init();
   </script>
 </body>
+
 </html>
